--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
         "@codeceptjs/ui": "^0.4.7",
         "codeceptjs": "^3.3.7",
         "playwright": "^1.29.2"
+    },
+    "dependencies": {
+        "codeceptjs-chai": "^2.3.3"
     }
 }
